--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,6 +3,7 @@
 <table class="table table-striped">
 <thead>
     <tr>
+    	  <th>Image</th>
         <th>Descriptions</th>
         <th></th>
         <th></th>
